--- a/index.html
+++ b/index.html
@@ -4,30 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="src/services/clientsDAO.js"></script>
+    <script type="text/javascript" src="src/controllers/main.js"></script>
+    <script type="text/javascript" src="src/controllers/createClient.js"></script>
     <script type="text/javascript" src="src/app.js"></script>
 </head>
 <body ng-app="angularApp">
-<div ng-controller="mainController">
-    <h1>First app</h1>
-    <h2>Add Client</h2>
-    <form>
-        <div>
-            Imię <input ng-model="formData.firstName" type="text" name="firstName"/>
-        </div>
-        <div>
-            Nazwisko <input ng-model="formData.lastName" type="text" name="firstName"/>
-        </div>
-        <div>
-            Rok <input ng-model="formData.year" type="text" name="firstName"/>
-        </div>
-        <button ng-click="addClient()">Add</button>
-    </form>
-    <h2>Client list</h2>
-    <ul>
-        <li ng-repeat="client in clients">
-            {{client.firstName}} {{client.lastName}} {{client.year}}
-        </li>
-    </ul>
-</div>
+<h1>Clients database</h1>
+<div ng-view></div>
 </body>
 </html>
